<resources>
    <string name="app_name">CyberTraining</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Next">Ready for the Test?</string>
    <string name="Map">View Library</string>
    <string name="text"> text appear here</string>
    <string name="back"> Back to Homepage</string>
    <string name="librarytext"> What is Security? \n \nIT security is a set of cybersecurity strategies that prevents unauthorised access to organisational assets such as computers, networks, and data. It maintains the integrity and confidentiality of sensitive information, blocking the access of sophisticated hackers.
    \n\nPlease tap on the following button to see the concepts or to browse general security knowledge.</string>
    <string name="text3">Welcome to the security training app.This application will provide explanations for the concepts and provide general knowledge about threats and vulnerabilities.</string>
    <string name="contact">For any enquiries you can see us personally here:
    Digbeth Campus,\n
    High Street Deritend, \n
    Birmingham \n
    B5 5SU
    \n
        \n
        For any other enquiries please contact us at chera.bhupinder@gmail.com
    </string>

    <string name="methods">Tap here for Security Knowledge</string>
    <string name="concepts">Tap here for Security Concepts</string>
</resources>