<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E6F0FA"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Library">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/helvetica"
        android:text="@string/librarytext"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/picturebox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginTop="-57dp"
        android:src="@drawable/cry" />


    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/methods"
        android:layout_marginTop="6dp"
        android:background="#F8F0E9"
        android:text="@string/back" />

    <Button
        android:id="@+id/concepts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginTop="210dp"
        android:background="#F8F0E9"
        android:text="@string/concepts" />

    <Button
        android:id="@+id/methods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/concepts"
        android:layout_marginTop="8dp"
        android:background="#F8F0E9"
        android:text="@string/methods" />


</RelativeLayout>